# near_integration_tests_bindings

./: Cargo.toml  README.md  run_integration_tests.sh
near_test_wrapper_macro/: Cargo.toml
near_test_wrapper_macro/src/: generate_test_bind.rs
near_test_wrapper_types/: Cargo.toml
res/: test_contract.wasm
tests/: Cargo.toml
tests/test_contract/: Cargo.toml
tests/test_contract/src/: lib.rs
tests/tests/: test.rs
