[package]
name = "test_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0" }
near_test_wrapper_macro = {path = "../../near_test_wrapper_macro"}
near_test_wrapper_types = {path = "../../near_test_wrapper_types"}